@@ -1,5 +1,9 @@
 2005-2-9  Caleb Moore <c.moore@student.unsw.edu.au>
 
+	* rsvg-paint-server.c: fixed jimmac's gradient problem
+
+2005-2-9  Caleb Moore <c.moore@student.unsw.edu.au>
+
 	* rsvg-styles.c: fixed spelling mistake in visibility property causing bug 166673
 	
 2005-2-7  Caleb Moore <c.moore@student.unsw.edu.au>
